# zebra-review

./: .gitignore  README.md  pyproject.toml  setup.py  zebra.py
.github/workflows/: zebra-pr.yml
docs/: DOCUMENTATION.md  USAGE.md
examples/: zebra-pr.yml
reports/: AUDIT-REPORT.md
reports/html/: timbersite-audit.html  timbersite-frontend-audit.html
reports/raw/: timbersite-frontend-zebra-report.md  timbersite-zebra-report.md
zebra/: __init__.py  cli.py  diff.py  docs.py  github.py  llm.py  remediation.py  report.py  report_html.py  report_review.py  review.py  util.py
zebra/scanners/: __init__.py  dependencies.py  quality.py  sast.py  secrets.py
